<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintxt"
            android:id="@+id/loginText"
            android:textSize="36dp"
            android:textAlignment="center"
            android:textStyle="bold"
           android:textColor="@color/pink"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/EmailName"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_email_24"
            android:padding="8dp"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:padding="8dp"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/pink"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:text="@string/not_yet_registered_signup_now"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/signupText"
            android:textColor="@color/pink"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>